@@ -194,7 +194,7 @@ class PolsatGoUpdater(baseServiceUpdater):
 
         except:
             self.log('Exception while trying to log in: {}'.format(getExceptionString()))
-            self.loginErrorMessage()  
+            self.connErrorMessage()  
         return False
 
     def getChannelList(self, silent):
