@@ -240,7 +240,7 @@ class NcPlusGoUpdater(baseServiceUpdater):
 
         except:
             self.log('Exception while trying to log in: {}'.format(getExceptionString()))
-            self.loginErrorMessage()
+            self.connErrorMessage()
         return False
 
     def getJson(self, url,params):
