@@ -116,7 +116,7 @@ WEEBTV_WEBTV_MISSING_1 = 30802
 WEEBTV_WEBTV_MISSING_2 = 30803
 WEEBTV_WEBTV_MISSING_3 = 30804
 
-SERVICE_ERROR = 57002
+SERVICE_ERROR = 57042
 SERVICE_NO_PREMIUM = 57039
 SERVICE_LOGIN_INCORRECT = 57048
 SERVICE_PROXY_BLOCK = 57053
