@@ -204,7 +204,7 @@ class WpPilotUpdater(baseServiceUpdater):
 
         except:
             self.log('Exception while trying to log in: {}'.format(getExceptionString()))
-            self.loginErrorMessage()
+            self.connErrorMessage()
         return False
 
     def getChannelList(self, silent):
