@@ -1,4 +1,5 @@
-﻿[COLOR yellow][B]wersja 9.3.0[/B] - 2021-04-12[/COLOR]
+﻿[COLOR yellow][B]wersja 9.3.0[/B] - 2021-04-13[/COLOR]
+- poprawka nagrywania z serwisu WP Pilot
 - dodana funkcja timeshift do serwisu Telia Play
 - poprawka błędu szyfrowania
 - naprawiono przycisk resetowania w menu pobierania
